# infokanal_backend

./: README.md  manage.py  pyproject.toml  requirements.txt
airss/: apps.py  crons.py  helpers.py  models.py  scrapper.py  serializers.py  urls.py  views.py
airss/chains/: retrieve_and_check_article.py  summarize.py
airss/functions/: filters.py  helpers.py  images_generator.py  retriever.py  rss_builder.py  scrapper.py
airss/migrations/: 0001_initial.py  0002_remove_fetchedfeeditem_allowed_to_summarize.py  0002_rssfeedaicontent_createdat.py  0003_alter_rssfeedaicontent_image_url.py  0003_fetchedfeeditem_allowed_to_summarize.py  0004_rssfeedsource_require_login.py  0004_rssfeedsource_rss_module.py  0005_fetchednews.py  0005_remove_rssfeedsource_rss_module.py  0006_rssfeedsource_source_name.py  0007_fetchedfeeditem_feed_title.py  0008_remove_rsssummarizedcontent_rss_module_and_more.py  0009_fetchedfeeditem_rss_feed_source.py  0010_fetchedfeeditem_is_rejected_and_more.py  0011_fetchedfeeditem_pub_date.py  0012_alter_fetchedfeeditem_pub_date.py  0013_fetchedfeeditem_image_url.py  0014_rssfeedsource_require_keywords_verification.py  0015_alter_fetchedfeeditem_feed_content.py  0016_alter_fetchedfeeditem_feed_content.py  0017_alter_rssmodulesettings_rss_module.py  0018_alter_fetchedfeeditem_image_url.py  0019_alter_fetchedfeeditem_pub_date.py
infokanal_backend/: asgi.py  settings.py  urls.py  wsgi.py
